@@ -717,7 +717,7 @@ fport_write (SCM port, const void *data, size_t size)
 
 /* becomes 1 when process is exiting: normal exception handling won't
    work by this time.  */
-extern int terminating; 
+extern int scm_i_terminating; 
 
 static void
 fport_flush (SCM port)
@@ -749,7 +749,7 @@ fport_flush (SCM port)
 		}
 	      pt->write_pos = pt->write_buf + remaining;
 	    }
-	  if (terminating)
+	  if (scm_i_terminating)
 	    {
 	      const char *msg = "Error: could not flush file-descriptor ";
 	      char buf[11];
