@@ -2684,7 +2684,7 @@ scm_gc_unregister_roots (SCM *b, unsigned long n)
     scm_gc_unregister_root (p);
 }
 
-int terminating;
+int scm_i_terminating;
 
 /* called on process termination.  */
 #ifdef HAVE_ATEXIT
@@ -2701,7 +2701,7 @@ cleanup (int status, void *arg)
 #endif
 #endif
 {
-  terminating = 1;
+  scm_i_terminating = 1;
   scm_flush_all_ports ();
 }
 
